chore: update java-service-standards SKILL.md with comprehensive Java development guidelines and standards